# music-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  app.py  pyproject.toml  renovate.json  run.py  spotify_auth.py  sync.py  ytmusic_auth.py
.github/workflows/: ci.yml  release.yml
docs/: OPERATIONS.md
scripts/: container-smoke.sh
tests/: test_music_sync.py  test_runner.py
