[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-music-sync"
version = "1.1.1"
description = "Unattended Spotify and YouTube Music library synchronization"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.15"
dependencies = [
    "Flask==3.1.3",
    "gunicorn==26.0.0",
    "spotipy==2.26.0",
    "yt-dlp==2026.7.4",
    "ytmusicapi==1.12.1",
]

[project.optional-dependencies]
dev = [
    "pip-audit==2.10.1",
    "pytest==9.1.1",
    "pytest-cov==7.0.0",
    "ruff==0.15.22",
]

[project.scripts]
music-sync = "run:main"

[tool.setuptools]
py-modules = ["app", "run", "spotify_auth", "sync", "ytmusic_auth"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*", "spotify_auth.py", "ytmusic_auth.py"]
